<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:src="@drawable/nipseyblue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_title_height"
            android:gravity="center_vertical"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/app_title_color"
            android:textSize='@dimen/app_title_text_size'
            android:textStyle="bold" />

        <TextView
            android:id="@+id/songs"
            style="@style/MenuItemStyle"
            android:text="@string/list_of_songs" />

        <TextView
            android:id="@+id/albums"
            style="@style/MenuItemStyle"
            android:text="@string/list_of_albums"/>

        <TextView
            android:id="@+id/artist"
            style="@style/MenuItemStyle"
            android:text="@string/list_of_artist"/>

    </LinearLayout>


</ScrollView>